fix wrong margins in connector grid

--- a/dynamic-mapping-ui/src/shared/connector-configuration/connector-grid.component.style.css
+++ b/dynamic-mapping-ui/src/shared/connector-configuration/connector-grid.component.style.css
@@ -27,3 +27,6 @@
     display: none !important;
   }
 }
+.m-l-auto.overflow-visible {
+  margin-left: 0px !important;
+}
